--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,22 @@
 .nav-wrapper {
     padding: 0 2rem;
 }
+.set-text {
+    font-size: 25px;
+}
+.course {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.course h1 {
+    margin-bottom: 2rem;
+}
+.course img {
+    max-width: 600px;
+    height: auto;
+}
+.course .price.big {
+    font-size: 2.5rem;
+}
