--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -1,1 +1,25 @@
 <h1>Courses</h1>
+
+{{#if courses.length}}
+  {{#each courses}}
+  <div class="row">
+    <div class="col s8 m6 l5 offset-s2 offset-m4 offset-l4">
+      <div class="card hoverable">
+        <div class="card-image">
+          <img src='{{url}}' alt="{{title}}">
+        </div>
+        <div class="divider"></div>
+        <div class="card-content">
+          <span class="card-title">{{title}}</span>
+          <p class="price"> {{price}}</p>
+        </div>
+        <div class="card-action">
+          <a href="/courses/{{id}}" target="_blank">Open course</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  {{/each}}
+{{else}}
+  <p>Empty </p>
+{{/if}}
