--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,31 +1,75 @@
 <nav>
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Courses App</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
+    <a href="#!" class="brand-logo">Logo</a>
+    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <ul class="right hide-on-med-and-down">
       {{#if isHome}}
-      <li class="active"><a href="/">Main</a></li>
-      {{else}}
-          <li><a href="/">Main</a></li>
-      {{/if}}
-      {{#if isCourse}}
-        <li class="active">
-          <a href="/courses">Courses</a>
-        </li>
-      {{else}}
-        <li>
-          <a href="/courses">Courses</a>
-        </li>
-      {{/if}}
-      {{#if isAdd}}
-        <li class="active">
-          <a href="/add-course">Add course</a>
-        </li>
-      {{else}}
-        <li>
-          <a href="/add-course">Add course</a>
-        </li>
-      {{/if}}
-
+              <li class="active"><a href="/">Main</a></li>
+                {{else}}
+                  <li><a href="/">Main</a></li>
+                {{/if}}
+              {{#if isCourse}}
+              <li class="active">
+                <a href="/courses">Courses</a>
+              </li>
+              {{else}}
+              <li>
+                <a href="/courses">Courses</a>
+              </li>
+              {{/if}}
+              {{#if isAdd}}
+              <li class="active">
+                <a href="/add-course">Add course</a>
+              </li>
+              {{else}}
+              <li>
+                <a href="/add-course">Add course</a>
+              </li>
+              {{/if}}
+              {{#if isSet}}
+              <li class="active">
+                <a href="/Settings">Settings</a>
+              </li>
+              {{else}}
+              <li>
+                <a href="/Settings">Settings</a>
+              </li>
+              {{/if}}
     </ul>
   </div>
 </nav>
+
+<ul class="sidenav" id="mobile-demo">
+  {{#if isHome}}
+    <li class="active"><a href="/">Main</a></li>
+  {{else}}
+    <li><a href="/">Main</a></li>
+  {{/if}}
+  {{#if isCourse}}
+    <li class="active">
+      <a href="/courses">Courses</a>
+    </li>
+  {{else}}
+    <li>
+      <a href="/courses">Courses</a>
+    </li>
+  {{/if}}
+  {{#if isAdd}}
+    <li class="active">
+      <a href="/add-course">Add course</a>
+    </li>
+  {{else}}
+    <li>
+      <a href="/add-course">Add course</a>
+    </li>
+  {{/if}}
+  {{#if isSet}}
+    <li class="active">
+      <a href="/Settings">Settings</a>
+    </li>
+  {{else}}
+    <li>
+      <a href="/Settings">Settings</a>
+    </li>
+  {{/if}}
+</ul>
