--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -15,6 +15,11 @@
         </div>
         <div class="card-action">
           <a href="/courses/{{id}}" target="_blank">Open course</a>
+          <a href="/courses/{{id}}/edit?allow=true" >Edit course</a>
+          <form action="/card/add" method="post">
+            <input type="hidden" name="id" value="{{id}}">
+            <button class="btn btn-primary" type="submit"> <i class="material-icons">shopping_basket</i></button>
+          </form>
         </div>
       </div>
     </div>
