--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -13,12 +13,12 @@
           <span class="card-title">{{title}}</span>
           <p class="price"> {{price}}</p>
         </div>
-        <div class="card-action">
+        <div class="card-action flex">
           <a href="/courses/{{id}}" target="_blank">Open course</a>
           <a href="/courses/{{id}}/edit?allow=true" >Edit course</a>
-          <form action="/card/add" method="post">
+          <form action="/card/add" method="POST" >
             <input type="hidden" name="id" value="{{id}}">
-            <button class="btn btn-primary" type="submit"> <i class="material-icons">shopping_basket</i></button>
+            <button class="btn btn-primary" type="submit"> <i class="material-icons">shopping_basket </i></button>
           </form>
         </div>
       </div>
