--- a/views/card.hbs
+++ b/views/card.hbs
@@ -1,1 +1,33 @@
 <h1>Basket</h1>
+<div id="card">
+  {{#if courses.length}}
+    <div class="row table text-bold">
+      <div class="col s4 m7 l8 ">Name</div>
+      <div class="col s3 m2 l2 text-align">
+        Price
+      </div>
+      <div class="col s5 m3 l2">
+        Action
+      </div>
+    </div>
+    <div class="divider divider-width"></div>
+    {{#each courses}}
+      <div class="row table">
+        <div class="col s4 m7 l8 ">{{title}}</div>
+        <div class="col s3 m2 l2 text-align">
+          {{count}}
+        </div>
+        <div class="col s5 m3 l2">
+          <button class="btn btn small deep-orange accent-3 js-remove" data-id="{{id}}" >Del</button>
+        </div>
+      </div>
+    {{/each}}
+    <div class="divider divider-width"></div>
+    <p  class="table">Price: <strong class="price"> {{price}}</strong></p>
+
+  {{else}}
+    <p>Empty Basket</p>
+  {{/if}}
+</div>
+
+
