--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -21,9 +21,17 @@
             <button class="btn btn-primary" type="submit"> <i class="material-icons">shopping_basket </i></button>
           </form>
         </div>
+        <div class="centered">
+          <form  action="/courses/remove" method="POST">
+            <input type="hidden" name="id" value="{{course.id}}">
+            <button type="submit" class="btn red">Delete course</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
+
+
   {{/each}}
 {{else}}
   <p>Empty </p>
