--- a/views/editPage.hbs
+++ b/views/editPage.hbs
@@ -17,5 +17,7 @@
     <span class="helper-text" data-error="Enter image URL" ></span>
   </div>
   <input type="hidden" name="id" value="{{course.id}}">
-  <button class="btn btn-primary">Edit course</button>
+  <button type="submit" class="btn btn-primary">Edit course</button>
 </form>
+
+
