--- a/views/editPage.hbs
+++ b/views/editPage.hbs
@@ -19,5 +19,11 @@
   <input type="hidden" name="id" value="{{course.id}}">
   <button type="submit" class="btn btn-primary">Edit course</button>
 </form>
+<div class="mt">
+  <form  action="/courses/remove" method="POST">
+    <input type="hidden" name="id" value="{{course.id}}">
+    <button type="submit" class="btn red">Delete course</button>
+  </form>
+</div>
 
 
