--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -35,6 +35,15 @@
                   <a href="/card">Basket</a>
                 </li>
               {{/if}}
+              {{#if isOrder}}
+                <li class="active">
+                  <a href="/orders">Orders</a>
+                </li>
+              {{else}}
+                <li>
+                  <a href="/orders">Orders</a>
+                </li>
+              {{/if}}
               {{#if isSet}}
               <li class="active">
                 <a href="/Settings">Settings</a>
@@ -79,6 +88,15 @@
   {{else}}
     <li>
       <a href="/card">Basket</a>
+    </li>
+  {{/if}}
+  {{#if isOrder}}
+    <li class="active">
+      <a href="/orders">Orders</a>
+    </li>
+  {{else}}
+    <li>
+      <a href="/orders">Orders</a>
     </li>
   {{/if}}
   {{#if isSet}}
