--- a/views/card.hbs
+++ b/views/card.hbs
@@ -29,7 +29,7 @@
     <div class="divider divider-width"></div>
     <p  class="table">Price: <strong class="price"> {{price}}</strong></p>
 
-    <form action="/orders" method="post">
+    <form action="/orders" method="POST">
       <button type="submit" class="btn">Orders</button>
     </form>
   {{else}}
