--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -1,1 +1,31 @@
-<h1>orders</h1>
+<h1>My orders</h1>
+{{#if orders.length}}
+{{#each orders}}
+  <div class="row">
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Order{{_id}}</span>
+          <p>Date: {{date}}</p>
+          <p><em>{{user.userId.name}}</em>({{user.userId..email}})</p>
+          <ol>
+            {{#each courses}}
+              <li>
+                {{course.title}} (x <strong>{{count}}</strong>)
+              </li>
+            {{/each}}
+          </ol>
+          <hr>
+          <p>Price: <span class="price"></span></p>
+        </div>
+        <!--        <div class="card-action">-->
+        <!--          <a href="#">This is a link</a>-->
+        <!--          <a href="#">This is a link</a>-->
+        <!--        </div>-->
+      </div>
+    </div>
+  </div>
+{{/each}}
+{{else}}
+<p>no orders yet</p>
+{{/if}}
