--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -17,6 +17,9 @@
     $(document).ready(function(){
       $('.sidenav').sidenav();
     });
+    $(document).ready(function(){
+      $('.tabs').tabs();
+    });
   </script>
 
 </head>
