--- a/public/index.css
+++ b/public/index.css
@@ -56,3 +56,12 @@ h1 {
 .mt {
     margin-top: 2rem;
 }
+.login-wrapper {
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    border: 1px solid lightcoral;
+    border-radius: 10px;
+    margin-top: 25%;
+    padding: 1rem 0;
+}
