--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,10 +1,50 @@
-<div class="row">
-  <div class="col s12">
-    <ul class="tabs">
-      <li class="tab col s6"><a class="active" href="#login">Login</a></li>
-      <li class="tab col s6"><a class="active" href="#registration">Registration</a></li>
-    </ul>
+<div class="login-wrapper">
+  <div class="row">
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s6"><a class="active" href="#login">Login</a></li>
+        <li class="tab col s6"><a class="active" href="#registration">Registration</a></li>
+      </ul>
+    </div>
+    <div id="login" class="col s6 offset-s3">
+
+      <form action="/login" method="post">
+        <h4>Enter to Courses shop</h4>
+        <div class="input-field">
+          <input name="email"  id="email" type="email" class="validate" required>
+          <label for="title">Email</label>
+          <span class="helper-text" data-error="Enter email" ></span>
+        </div>
+        <div class="input-field">
+          <input name="password"  id="password" type="password" class="validate" required min="6">
+          <label for="password">Password</label>
+          <span class="helper-text" data-error="Enter password min 6 characters" data-success="right"></span>
+        </div>
+        <button class="btn btn-primary" type="submit">Login</button>
+      </form>
+
+    </div>
+    <div id="registration" class="col s6 offset-s3">
+      <form action="/login" method="post">
+        <h4>Registration form</h4>
+        <div class="input-field">
+          <input name="remail"  id="remail" type="email" class="validate" required>
+          <label for="remail">Email</label>
+          <span class="helper-text" data-error="Enter email" ></span>
+        </div>
+        <div class="input-field">
+          <input name="rpassword"  id="rpassword" type="password" class="validate" required min="6">
+          <label for="rpassword">Password</label>
+          <span class="helper-text" data-error="Enter password min 6 characters" data-success="right"></span>
+        </div>
+        <div class="input-field">
+          <input name="confirm"  id="confirm" type="password" class="validate" required min="6">
+          <label for="confirm">Confirm password</label>
+          <span class="helper-text" data-error="Enter password min 6 characters" data-success="right"></span>
+        </div>
+        <button class="btn btn-primary" type="submit">Registration</button>
+      </form>
+    </div>
   </div>
-  <div id="login" class="col s6 offset-s3">Login</div>
-  <div id="registration" class="col s6 offset-s3">Registration</div>
 </div>
+
