--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -4,64 +4,70 @@
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       {{#if isHome}}
-              <li class="active"><a href="/">Main</a></li>
-                {{else}}
-                  <li><a href="/">Main</a></li>
-                {{/if}}
-              {{#if isCourse}}
-              <li class="active">
-                <a href="/courses">Courses</a>
-              </li>
-              {{else}}
-              <li>
-                <a href="/courses">Courses</a>
-              </li>
-              {{/if}}
-              {{#if isAdd}}
-              <li class="active">
-                <a href="/add-course">Add course</a>
-              </li>
-              {{else}}
-              <li>
-                <a href="/add-course">Add course</a>
-              </li>
-              {{/if}}
-              {{#if isCard}}
-                <li class="active">
-                  <a href="/card">Basket</a>
-                </li>
-              {{else}}
-                <li>
-                  <a href="/card">Basket</a>
-                </li>
-              {{/if}}
-<!--              {{#if isOrder}}-->
-<!--                <li class="active">-->
-<!--                  <a href="/orders">Orders</a>-->
-<!--                </li>-->
-<!--              {{else}}-->
-<!--                <li>-->
-<!--                  <a href="/orders">Orders</a>-->
-<!--                </li>-->
-<!--              {{/if}}-->
-              {{#if isSet}}
-              <li class="active">
-                <a href="/Settings">Settings</a>
-              </li>
-              {{else}}
-              <li>
-                <a href="/Settings">Settings</a>
-              </li>
-              {{/if}}
-              {{#if isLogin}}
-                <li class="active">
-                  <a href="/login">Login</a>
-                </li>
-              {{else}}
-                <li>
-                  <a href="/login">LogOut</a>
-                </li>
-              {{/if}}
+        <li class="active"><a href="/">Main</a></li>
+      {{else}}
+        <li><a href="/">Main</a></li>
+      {{/if}}
+      {{#if isCourse}}
+        <li class="active">
+          <a href="/courses">Courses</a>
+        </li>
+      {{else}}
+        <li>
+          <a href="/courses">Courses</a>
+        </li>
+      {{/if}}
+      {{#if isAuth}}
+        {{#if isAdd}}
+          <li class="active">
+            <a href="/add-course">Add course</a>
+          </li>
+        {{else}}
+          <li>
+            <a href="/add-course">Add course</a>
+          </li>
+        {{/if}}
+        {{#if isCard}}
+          <li class="active">
+            <a href="/card">Basket</a>
+          </li>
+        {{else}}
+          <li>
+            <a href="/card">Basket</a>
+          </li>
+        {{/if}}
+          <!--              {{#if isOrder}}-->
+        <!--                <li class="active">-->
+        <!--                  <a href="/orders">Orders</a>-->
+        <!--                </li>-->
+          <!--              {{else}}-->
+        <!--                <li>-->
+        <!--                  <a href="/orders">Orders</a>-->
+        <!--                </li>-->
+          <!--              {{/if}}-->
+        {{#if isSet}}
+          <li class="active">
+            <a href="/Settings">Settings</a>
+          </li>
+        {{else}}
+          <li>
+            <a href="/Settings">Settings</a>
+          </li>
+        {{/if}}
+        <li>
+          <a href="/auth/logout">Logout</a>
+        </li>
+      {{else}}
+        {{#if isLogin}}
+          <li class="active">
+            <a href="/auth/login#login">Login</a>
+          </li>
+        {{else}}
+          <li>
+            <a href="/auth/login#login">Login</a>
+          </li>
+        {{/if}}
+      {{/if}}
     </ul>
   </div>
 </nav>
@@ -81,49 +87,52 @@
       <a href="/courses">Courses</a>
     </li>
   {{/if}}
-  {{#if isAdd}}
-    <li class="active">
-      <a href="/add-course">Add course</a>
-    </li>
+    {{#if isAuth}}
+      {{#if isAdd}}
+        <li class="active">
+          <a href="/add-course">Add course</a>
+        </li>
+      {{else}}
+        <li>
+          <a href="/add-course">Add course</a>
+        </li>
+      {{/if}}
+      {{#if isCard}}
+        <li class="active">
+          <a href="/card">Basket</a>
+        </li>
+      {{else}}
+        <li>
+          <a href="/card">Basket</a>
+        </li>
+      {{/if}}
+        <!--              {{#if isOrder}}-->
+      <!--                <li class="active">-->
+      <!--                  <a href="/orders">Orders</a>-->
+      <!--                </li>-->
+        <!--              {{else}}-->
+      <!--                <li>-->
+      <!--                  <a href="/orders">Orders</a>-->
+      <!--                </li>-->
+        <!--              {{/if}}-->
+      {{#if isSet}}
+        <li class="active">
+          <a href="/Settings">Settings</a>
+        </li>
+      {{else}}
+        <li>
+          <a href="/Settings">Settings</a>
+        </li>
+      {{/if}}
   {{else}}
-    <li>
-      <a href="/add-course">Add course</a>
-    </li>
-  {{/if}}
-  {{#if isCard}}
-    <li class="active">
-      <a href="/card">Basket</a>
-    </li>
-  {{else}}
-    <li>
-      <a href="/card">Basket</a>
-    </li>
-  {{/if}}
-<!--  {{#if isOrder}}-->
-<!--    <li class="active">-->
-<!--      <a href="/orders">Orders</a>-->
-<!--    </li>-->
-<!--  {{else}}-->
-<!--    <li>-->
-<!--      <a href="/orders">Orders</a>-->
-<!--    </li>-->
-<!--  {{/if}}-->
-  {{#if isSet}}
-    <li class="active">
-      <a href="/Settings">Settings</a>
-    </li>
-  {{else}}
-    <li>
-      <a href="/Settings">Settings</a>
-    </li>
-  {{/if}}
-  {{#if isLogin}}
-    <li class="active">
-      <a href="/login">Login</a>
-    </li>
-  {{else}}
-    <li>
-      <a href="/login">LogOut</a>
-    </li>
+    {{#if isLogin}}
+      <li class="active">
+        <a href="/auth/login#login">Login</a>
+      </li>
+    {{else}}
+      <li>
+        <a href="/auth/login#login">Login</a>
+      </li>
+    {{/if}}
   {{/if}}
 </ul>
