--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -8,7 +8,7 @@
     </div>
     <div id="login" class="col s6 offset-s3">
 
-      <form action="/auth/login#login" method="post">
+      <form action="/auth/login" method="post">
         <h4>Enter to Courses shop</h4>
         <div class="input-field">
           <input name="email"  id="email" type="email" class="validate" required>
@@ -25,15 +25,20 @@
 
     </div>
     <div id="registration" class="col s6 offset-s3">
-      <form action="/auth/login#registration" method="post">
+      <form action="/auth/register" method="post">
         <h4>Registration form</h4>
         <div class="input-field">
-          <input name="remail"  id="remail" type="email" class="validate" required>
+          <input name="email"  id="remail" type="email" class="validate" required>
           <label for="remail">Email</label>
           <span class="helper-text" data-error="Enter email" ></span>
         </div>
         <div class="input-field">
-          <input name="rpassword"  id="rpassword" type="password" class="validate" required min="4">
+          <input name="name"  id="confirm" type="text" class="validate" required >
+          <label for="name">Enter your name</label>
+          <span class="helper-text" data-error="Enter name" data-success="right"></span>
+        </div>
+        <div class="input-field">
+          <input name="password"  id="rpassword" type="password" class="validate" required min="4">
           <label for="rpassword">Password</label>
           <span class="helper-text" data-error="Enter password min 6 characters" data-success="right"></span>
         </div>
@@ -42,6 +47,7 @@
           <label for="confirm">Confirm password</label>
           <span class="helper-text" data-error="Enter password min 6 characters" data-success="right"></span>
         </div>
+
         <button class="btn btn-primary" type="submit">Registration</button>
       </form>
     </div>
