--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -87,43 +87,46 @@
       <a href="/courses">Courses</a>
     </li>
   {{/if}}
-    {{#if isAuth}}
-      {{#if isAdd}}
-        <li class="active">
-          <a href="/add-course">Add course</a>
-        </li>
-      {{else}}
-        <li>
-          <a href="/add-course">Add course</a>
-        </li>
-      {{/if}}
-      {{#if isCard}}
-        <li class="active">
-          <a href="/card">Basket</a>
-        </li>
-      {{else}}
-        <li>
-          <a href="/card">Basket</a>
-        </li>
-      {{/if}}
-        <!--              {{#if isOrder}}-->
-      <!--                <li class="active">-->
-      <!--                  <a href="/orders">Orders</a>-->
-      <!--                </li>-->
-        <!--              {{else}}-->
-      <!--                <li>-->
-      <!--                  <a href="/orders">Orders</a>-->
-      <!--                </li>-->
-        <!--              {{/if}}-->
-      {{#if isSet}}
-        <li class="active">
-          <a href="/Settings">Settings</a>
-        </li>
-      {{else}}
-        <li>
-          <a href="/Settings">Settings</a>
-        </li>
-      {{/if}}
+  {{#if isAuth}}
+    {{#if isAdd}}
+      <li class="active">
+        <a href="/add-course">Add course</a>
+      </li>
+    {{else}}
+      <li>
+        <a href="/add-course">Add course</a>
+      </li>
+    {{/if}}
+    {{#if isCard}}
+      <li class="active">
+        <a href="/card">Basket</a>
+      </li>
+    {{else}}
+      <li>
+        <a href="/card">Basket</a>
+      </li>
+    {{/if}}
+      <!--              {{#if isOrder}}-->
+    <!--                <li class="active">-->
+    <!--                  <a href="/orders">Orders</a>-->
+    <!--                </li>-->
+      <!--              {{else}}-->
+    <!--                <li>-->
+    <!--                  <a href="/orders">Orders</a>-->
+    <!--                </li>-->
+      <!--              {{/if}}-->
+    {{#if isSet}}
+      <li class="active">
+        <a href="/Settings">Settings</a>
+      </li>
+    {{else}}
+      <li>
+        <a href="/Settings">Settings</a>
+      </li>
+    {{/if}}
+    <li>
+      <a href="/auth/logout">Logout</a>
+    </li>
   {{else}}
     {{#if isLogin}}
       <li class="active">
