--- a/public/index.css
+++ b/public/index.css
@@ -65,3 +65,11 @@ h1 {
     margin-top: 20%;
     padding: 1rem 0;
 }
+.alert {
+    background-color: rgba(240, 128, 128, 0.63);
+    color: red;
+    font-size: 14px;
+    padding: 1rem;
+    border-radius: 8px;
+    text-align: center;
+}
