added profile and file upload

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -36,8 +36,8 @@
         <p class="alert">{{regError}}</p>
         {{/if}}
         <div class="input-field">
-          <input name="email"  id="remail" type="email" class="validate" required>
-          <label for="remail">Email</label>
+          <input name="email"  id="email" type="email" class="validate" required>
+          <label for="email">Email</label>
           <span class="helper-text" data-error="Enter email" ></span>
         </div>
         <div class="input-field">
