--- a/public/index.css
+++ b/public/index.css
@@ -73,3 +73,25 @@ h1 {
     border-radius: 8px;
     text-align: center;
 }
+.avatar {
+    max-width: 300px;
+    height: auto;
+}
+.profile-wrapper {
+    min-width: 320px;
+}
+.mt-top {
+    margin-top: 1rem;
+}
+.no-avatar {
+    width: 300px;
+    height: 300px;
+    background-color: lightgray;
+    border-radius: 50%;
+    color: grey;
+    font-size: 2.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
